test/compile-fail/resolution/multiple-definition-macro/top.rhdl
macro_rules! a {
    () => {
        
    };
}
macro_rules! a {
    () => {
        
    };
}
